# KeyAttack

./: README.md
KeyAttack/: Evolving Deep Neural Networks.docx  data_info.py  pyproject.toml
KeyAttack/keyattack/: CurtisMBPModel  CurtisMBPModelLabelIndices  NayanMKModel  NayanMKModelLabelIndices  SampleDataMBPModel  SampleDataZoomModel
KeyAttack/keyattack/Console Outputs/: curtis_mbp_infer_output.txt  curtis_mbp_train_console_output.txt  nayan_mk_infer_output.txt  nayan_mk_train_console_output.txt  sample_mbp_infer_output.txt  sample_mbp_train_console_output.txt  sample_zoom_infer_output.txt  sample_zoom_train_console_output.txt
KeyAttack/keyattack/Data/: load_data.py
KeyAttack/keyattack/Data/Keystroke-Datasets/: README.md
KeyAttack/keyattack/Data/utils/: to_wav.py
KeyAttack/keyattack/DeepKeyAttack/: CoAtNet.py  infer.py  interpret.py  target_index.py  train.py
KeyAttack/keyattack/Keystroke-Datasets/: load_data.py
KeyAttack/keyattack/Models/: CurtisMBPModel  CurtisMBPModelLabelIndices  NayanMKModel  SampleDataMBPModel  SampleDataZoomModel
KeyAttack/tests/: demo_text.txt  evaluate.py  infer.py  interpret.py  test.py  typing_aid.py
KeyAttack/tests/demo/: demo_text.txt
KeyAttack/tests/demoaudio/: demo_text.txt
KeyAttackSampleData/: pyproject.toml
KeyAttackSampleData/keyattacksampledata/: Model
