[tool.poetry]
name = "keyattacksampledata"
version = "0.1.0"
description = ""
authors = ["kevin-zhang02 <71109540+kevin-zhang02@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sklearn = "^0.0.post11"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
librosa = "^0.10.1"
pandas = "^2.1.3"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.1.1%2Bcu118-cp310-cp310-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.16.1%2Bcu118-cp310-cp310-win_amd64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
